# PVZ-2024

./: .gitignore  .gitmodules  CMakeLists.txt  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  README.md  background.cpp  background.h  game.cpp  game.h  game_parameters.h  helper.cpp  helper.h  main.cpp  parse.py  pea.cpp  pea.h  peashooter.cpp  peashooter.h  plant.cpp  plant.h  sun.cpp  sun.h  sunflower.cpp  sunflower.h  test.cpp  unit.cpp  unit.h  units.h  zombie.cpp  zombie.h
Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/ConsoleA.4636091f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/: Explanation.md  Explanation_chinese.md  How_To_Contribute.md  How_To_Contribute_Chinese.md  README.md
external_images_and_audio/: Thumbs.db
external_images_and_audio/Zombies/Zombie/: sep.py
gui/: CMakeLists.txt  main.cpp
gui/lib/: CMakeLists.txt
gui/lib/include/: app.h  command.h  descriptor.h  device.h  file_helper.h  image.h  object.h  pipeline.h  swap_chain.h  window.h
gui/lib/src/: app.cpp  command.cpp  descriptor.cpp  device.cpp  file_helper.cpp  image.cpp  object.cpp  pipeline.cpp  swap_chain.cpp  window.cpp
gui/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
lib/: CMakeLists.txt
lib/include/: background.h  bullet.h  cherrybomb.h  game.h  game_parameters.h  helper.h  pea.h  peashooter.h  plant.h  sun.h  sunflower.h  unit.h  units.h  zombie.h
lib/src/: background.cpp  bullet.cpp  cherrybomb.cpp  game.cpp  game_parameters.cpp  helper.cpp  pea.cpp  peashooter.cpp  plant.cpp  sun.cpp  sunflower.cpp  test.cpp  unit.cpp  zombie.cpp
