cmake_minimum_required(VERSION 3.11)
project(PVZ2024)
option(DEBUG_VULKAN "Set this to on if you want to show Vulkan debugging message. Note that if you are not using Windows, this may lead to compilation errors, since some platform-specific debug codes are used." OFF)
#add_subdirectory(external/Vulkan-Headers)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
# target_include_directories(${PROJECT_NAME} PUBLIC lib)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external)
# target_link_directories(${PROJECT_NAME} PUBLIC lib)
# target_link_libraries(${PROJECT_NAME} PUBLIC lib)
# target_link_libraries(${PROJECT_NAME} PUBLIC lib external)
add_subdirectory(gui)
# add_subdirectory(lib)
add_executable(${PROJECT_NAME} main.cpp)