cmake_minimum_required(VERSION 3.11)
project(PVZ2024)
option(DEBUG_VULKAN "Set this to on if you want to show Vulkan debugging message. Clear CMake Cache if it's not functioning" ON)
#add_subdirectory(external/Vulkan-Headers)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
# target_include_directories(${PROJECT_NAME} PUBLIC lib)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external)
# target_link_directories(${PROJECT_NAME} PUBLIC lib)
# target_link_libraries(${PROJECT_NAME} PUBLIC lib)
# target_link_libraries(${PROJECT_NAME} PUBLIC lib external)
add_executable(${PROJECT_NAME} main.cpp)
add_subdirectory(gui)
add_subdirectory(lib)
target_link_directories(${PROJECT_NAME} PUBLIC gui)
target_link_libraries(${PROJECT_NAME} PUBLIC gui_lib)
target_include_directories(${PROJECT_NAME} PUBLIC lib)
target_link_directories(${PROJECT_NAME} PUBLIC lib)
target_link_libraries(${PROJECT_NAME} PUBLIC lib)

if(DEBUG_VULKAN)
    target_compile_definitions(gui_lib PRIVATE VULKAN_DEBUG=114514)
endif()